--- a/myapp/src/app/app.component.css
+++ b/myapp/src/app/app.component.css
@@ -39,14 +39,14 @@
       right: 5px;
       top: 10px;
       padding: 10px;
-      z-index: 100;
       border-radius: 50%;
       width: auto;
       height: 75px; }
 
   #social_media_bar {
-    display: none;
-    position: static;
+    display: flex;
+    position: absolute;
+    bottom: -1px;
     width: 100%;
     height: auto;
     overflow: auto;
@@ -76,12 +76,16 @@
         height: 33px; }
 
   div#footer {
+    background-size: 100%;
+    background-image: -webkit-linear-gradient(#2ba9a9, #464646);
+    background-image: linear-gradient(#2ba9a9, #464646);
+    position: relative;
+    z-index: 100;
+    border-style: solid;
     display: inline-block;
     position: fixed;
     bottom: 0;
-    border-style: solid;
     background-color: black;
-    opacity: .7;
     width: 100%;
     height: 5%;
     font-size: 8pt;
@@ -89,12 +93,30 @@
     line-height: 25px;
     padding-left: auto;
     padding-right: auto;
-    color: darkorange;
-    text-align: center; } }
+    color: white;
+    text-align: center; }
+    div#footer:before {
+      border-radius: inherit;
+      background-image: -webkit-linear-gradient(#464646, #2ba9a9);
+      background-image: linear-gradient(#464646, #2ba9a9);
+      content: '';
+      display: block;
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      z-index: -100;
+      -moz-transition: opacity 1s ease-in-out;
+      -webkit-transition: opacity 1s ease-in-out;
+      transition: opacity 1s ease-in-out; }
+    div#footer:hover:before {
+      opacity: 1; } }
 @media (min-width: 701px) and (max-width: 1200px) {
   .pane_top {
     color: white;
-    background-color: darkorange;
+    background-color: red;
     position: static;
     opacity: 0.7;
     display: none;
