--- a/myapp/src/app/app.component.scss
+++ b/myapp/src/app/app.component.scss
@@ -77,7 +77,6 @@
       right: 5px;
       top: 10px;
       padding: 10px;
-      z-index: 100;
       border-radius: 50%;
       width: auto;
       height: 75px;
@@ -85,8 +84,9 @@
   }
   #social_media_bar {
   //  @include gradient-animation( #ffffff, #464646, 1s);
-    display: none;
-    position: static;
+    display: flex;
+    position: absolute;
+    bottom: -1px;
     width: 100%;
     height: auto;
     overflow: auto;
@@ -121,12 +121,12 @@
   }
 
   div#footer{
+    @include gradient-animation( #2ba9a9, #464646, 1s);
+    border-style: solid;
     display: inline-block;
     position: fixed;
     bottom: 0;
-    border-style: solid;
     background-color: black;
-    opacity: .7;
     width: 100%;
     height: 5%;
     font-size: 8pt;
@@ -134,7 +134,7 @@
     line-height: 25px;
     padding-left: auto;
     padding-right: auto;
-    color: darkorange;
+    color: white;
     text-align: center;
   }
 }
@@ -142,7 +142,7 @@
 @media (min-width: $breakpoint-mobile + 1) and (max-width: $breakpoint-tablet) {
   .pane_top {
     color: white;
-    background-color: darkorange;
+    background-color: red;
     position: static;
     opacity: 0.7;
     display: none;
