--- a/myapp/src/app/main/main.component.css
+++ b/myapp/src/app/main/main.component.css
@@ -7,24 +7,24 @@
     list-style: none;
     display: flex;
     flex-flow: wrap;
-    text-align: center; }
+    text-align: center;
+    background-color: #227f7f;
+    opacity: .8; }
     #main #visual_pane .content {
       opacity: .8;
       width: 33%;
-      height: 120px;
-      background-color: white;
+      height: 100px;
       margin: auto;
       margin-top: 1px; }
       #main #visual_pane .content a {
+        background-color: black;
         width: 100%;
-        background-color: #2ba9a9;
         font-size: x-large;
         font-weight: 800;
-        color: white;
+        line-height: 100px;
         text-decoration: none;
-        opacity: .8; }
-      #main #visual_pane .content a:hover, #main #visual_pane .content a:visited, #main #visual_pane .content a:hover {
-        color: white; }
+        opacity: .9;
+        color: #ff7e00; }
     #main #visual_pane .content:active, #main #visual_pane .content:hover {
       opacity: 1; }
       #main #visual_pane .content:active a, #main #visual_pane .content:hover a {
@@ -44,14 +44,15 @@
     height: auto;
     font-size: 11pt;
     letter-spacing: 1pt;
-    color: #717171;
+    color: #2ba9a9;
     opacity: 1; }
     #monolog_pane #bread_crums li {
       font-weight: 800;
       display: inline;
       list-style-type: none; }
     #monolog_pane #bread_crums li.selected {
-      color: darkgray; }
+      color: #2ba9a9;
+      opacity: .5; }
   #monolog_pane span#content {
     padding: 1px; }
     #monolog_pane span#content h4 {
@@ -66,13 +67,18 @@
       font-weight: lighter;
       text-indent: 0; }
     #monolog_pane span#content div#me_wrap {
+      -webkit-transform: translate(0);
+      -moz-transform: translate(0);
+      -ms-transform: translate(0);
+      -o-transform: translate(0);
+      transition: 1s;
       display: table-cell;
       vertical-align: middle;
       text-align: center;
       border-radius: 50%;
       border-width: 2px;
       opacity: .9;
-      background: -webkit-linear-gradient(right top, #2ba9a9 30%, #ff5644 80%);
+      background: -webkit-linear-gradient(left bottom, #2ba9a9 30%, #4b3c39 80%);
       float: right;
       width: 54px;
       height: 54px;
@@ -90,6 +96,13 @@
         background-repeat: no-repeat;
         background-size: contain;
         width: 54px;
-        height: 54px; }
+        height: 54px;
+        transition: 1s; }
+    #monolog_pane span#content div#me_wrap:hover {
+      -webkit-transform: translate(100px);
+      -moz-transform: translate(100px);
+      -ms-transform: translate(100px);
+      -o-transform: translate(100px);
+      transition: 1s; }
 
 /*# sourceMappingURL=main.component.css.map */
