--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -37,20 +37,26 @@
       <!--</span>-->
       <span id="content_text"
             [style.display]="monolog_pane_showorhide('myself')">
-        I'm a freelance software developer based in Seattle.
-        I'm also ava
-        This site is the hub of my social media feed and blog.
-        It also has my professional information for download.
-        Please feel free to reach out to collaborate.
-    </span>
+        Hey there, thanks for visiting. I'm a front-end application developer based in Seattle.
+        I quickly accumulated a variety of Software Engineer
+        experience after college by working as intern, contractor and founder at different start-ups.
+        I'm also a data and automated agriculture enthusiast, I'm looking for ways to make farming more cool.
+        When not working, I like to be outdoors, and participate in recreational sports.
+        I also spend much of my time in Southeast Asia where the food is always fresh.
+      </span>
       <span id="startup"
-            [style.display]="monolog_pane_showorhide('startup')">I love startup because it allows radically ideas to take shape.
-         Over the last years,
-        I've had the opportunity to work at several different startups based in Seattle.
+            [style.display]="monolog_pane_showorhide('startup')">
+        I love startup because it allows radically ideas to form and take shape in a safe environment.
+        Over the last years,I've had the opportunity to work at several different start-ups in Seattle WA, USA.
+        <br>
+        I feel it's inevitable that I will need to run a company of my own because I constantly see things that
+        can be improved, especially in Southeast Asia. But for now, I'm thankful for my role as an application engineer.
       </span>
       <span id="people"
-            [style.display]="monolog_pane_showorhide('people')">People are the heart of my work.
-        My interest to better understand human behaviors came out of my passion to design awesome product/service.
+            [style.display]="monolog_pane_showorhide('people')">
+        As people, I believe we're best when we seek to serve one another.
+        I've had the fortunate to live in many different cultures and one thing I
+        find true is that people seek meaningful connection.
       </span>
       </p>
     </span>
