--- a/myapp/src/app/app.component.css
+++ b/myapp/src/app/app.component.css
@@ -50,26 +50,19 @@
     width: 100%;
     height: auto;
     overflow: auto;
-    white-space: nowrap; }
-    #social_media_bar span {
-      width: auto;
-      height: auto;
-      display: inline-block;
+    white-space: nowrap;
+    background-color: #333333;
+    opacity: .9; }
+    #social_media_bar a {
+      display: inline-flex;
       color: black;
       text-align: center;
-      padding: 10px;
-      padding-bottom: 0;
-      padding-top: 20px;
+      padding-bottom: 5px;
+      padding-top: 5px;
       text-decoration: none; }
-      #social_media_bar span span#link {
-        width: 33px;
-        height: 33px;
-        background-color: red; }
-      #social_media_bar span img {
-        opacity: .7;
+      #social_media_bar a img {
+        opacity: .9;
         padding: 3px;
-        padding-top: 8px;
-        padding-bottom: 8px;
         display: block;
         margin: auto;
         width: 33px;
@@ -87,10 +80,10 @@
     bottom: 0;
     background-color: black;
     width: 100%;
-    height: 5%;
-    font-size: 8pt;
+    height: 40px;
+    font-size: 10pt;
     font-weight: 500;
-    line-height: 25px;
+    line-height: 40px;
     padding-left: auto;
     padding-right: auto;
     color: white;
