--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -2,24 +2,21 @@
 
 
 <router-outlet> </router-outlet>
-<div id='social_media_bar' [@socialmediaState]="socialmedia_state == true? 'true':'false'" >
-    <span href='https://github.com/tannerP' target='_top'>
+<div id="footer" (click)="toggle_socialMedia()">{{footer_tog == true? '&copy; Tanner Phan 2017':'Reach Out'}}</div>
+<div id='social_media_bar' [@socialmediaState]="socialmedia_state === true ? 'true':'false'" >
+  <a href='https://github.com/tannerP' target='_top'>
     <img src="assets/medias/medium.png">
-  </span>
-  <span href='https://github.com/tannerP' target='_top'>
+  </a>
+  <a href='https://github.com/tannerP' target='_top'>
     <img src="assets/medias/twitter_blk.png">
-  </span>
-  <span href='https://github.com/tannerP' target='_top'>
+  </a>
+  <a href='https://github.com/tannerP' target='_top'>
     <img src="assets/medias/linkedin_blk.png">
-  </span>
-  <span href='https://github.com/tannerP' target='_top'>
+  </a>
+  <a href='https://github.com/tannerP' target='_top'>
     <img src="assets/medias/mail_blk.png">
-  </span>
-  <span href='https://github.com/tannerP' target='_top'>
+  </a>
+  <a href='https://github.com/tannerP' target='_top'>
     <img src="assets/medias/github_blk.png">
-  </span>
+  </a>
 </div>
-<div id="footer" (click)="toggle_socialMedia()">
-&copy; Tanner Phan 2017
-</div>
-
