--- a/myapp/src/app/app.component.scss
+++ b/myapp/src/app/app.component.scss
@@ -91,26 +91,18 @@
     height: auto;
     overflow: auto;
     white-space: nowrap;//hor scroll
-    span {
-      width:auto;
-      height:auto;
-      display: inline-block;
+    background-color: #333333;
+    opacity: .9;
+    a {
+      display:inline-flex;
       color: black;
       text-align: center;
-      padding: 10px;
-      padding-bottom: 0;
-      padding-top: 20px;
+      padding-bottom: 5px;
+      padding-top: 5px;
       text-decoration: none;
-      span#link{
-        width: 33px;
-        height: 33px;
-        background-color:red;
-      }
       img {
-        opacity: .7;
+        opacity: .9;
         padding: 3px;
-        padding-top: 8px;
-        padding-bottom: 8px;
         display: block;
         margin: auto;
         width: 33px;
@@ -128,10 +120,10 @@
     bottom: 0;
     background-color: black;
     width: 100%;
-    height: 5%;
-    font-size: 8pt;
+    height: 40px;
+    font-size: 10pt;
     font-weight: 500;
-    line-height: 25px;
+    line-height: 40px;
     padding-left: auto;
     padding-right: auto;
     color: white;
