--- a/myapp/src/app/blog/blog.component.html
+++ b/myapp/src/app/blog/blog.component.html
@@ -1,13 +1,15 @@
 <div id="hashtagnav">
-  <h2> Hash Nav</h2>
-  <ul>
+  <h1 id="filter_title"> F I L T E R S</h1>
+  <h1 id="back" class="button"> B A C K </h1>
+  <h1 id="reset"> R E S E T </h1>
+
+  <ul id="filter_list">
     <li>#helloworld</li>
   </ul>
 </div>
 
 <div id="content">
   <ul>
-    <li> list item</li>
-    <li> list item</li>
+    <li *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8 , 8, 9, 9]"> {{i}}</li>
   </ul>
 </div>
