--- a/myapp/src/app/main/main.component.css
+++ b/myapp/src/app/main/main.component.css
@@ -9,9 +9,9 @@
     flex-flow: wrap;
     text-align: center;
     background-color: #227f7f;
-    opacity: .8; }
+    opacity: .9; }
     #main #visual_pane .content {
-      opacity: .8;
+      opacity: .9;
       width: 33%;
       height: 100px;
       margin: auto;
@@ -34,7 +34,7 @@
   background-color: white;
   position: static;
   width: 100%;
-  height: auto;
+  height: 40%;
   opacity: .8; }
   #monolog_pane #bread_crums {
     cursor: default;
@@ -44,8 +44,7 @@
     height: auto;
     font-size: 11pt;
     letter-spacing: 1pt;
-    color: #2ba9a9;
-    opacity: 1; }
+    color: #2ba9a9; }
     #monolog_pane #bread_crums li {
       font-weight: 800;
       display: inline;
@@ -83,11 +82,11 @@
       width: 54px;
       height: 54px;
       margin: 10px;
-      padding: 2px; }
+      padding: 1px; }
       #monolog_pane span#content div#me_wrap div#me {
         display: inline-block;
         position: relative;
-        top: 1px;
+        top: 0px;
         margin: auto;
         border-style: solid;
         border-radius: 50%;
@@ -99,6 +98,7 @@
         height: 54px;
         transition: 1s; }
     #monolog_pane span#content div#me_wrap:hover {
+      display: none;
       -webkit-transform: translate(100px);
       -moz-transform: translate(100px);
       -ms-transform: translate(100px);
