--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -37,26 +37,22 @@
       <!--</span>-->
       <span id="content_text"
             [style.display]="monolog_pane_showorhide('myself')">
-        Hey there, thanks for visiting. I'm a front-end application developer based in Seattle.
-        I quickly accumulated a variety of Software Engineer
-        experience after college by working as intern, contractor and founder at different start-ups.
-        I'm also a data and automated agriculture enthusiast, I'm looking for ways to make farming more cool.
-        When not working, I like to be outdoors, and participate in recreational sports.
-        I also spend much of my time in Southeast Asia where the food is always fresh.
+        Hey there! Thanks for visiting. I'm a front-end application developer based in Seattle.
+        I have experience working as an intern, a contractor and I have experience as a co-founder of a software start-ups.
+        My side projects include things like automated farming and IoT applications.
+        On my time off, I enjoy recreational sports and exploring different cultures.
       </span>
       <span id="startup"
             [style.display]="monolog_pane_showorhide('startup')">
-        I love startup because it allows radically ideas to form and take shape in a safe environment.
-        Over the last years,I've had the opportunity to work at several different start-ups in Seattle WA, USA.
-        <br>
-        I feel it's inevitable that I will need to run a company of my own because I constantly see things that
-        can be improved, especially in Southeast Asia. But for now, I'm thankful for my role as an application engineer.
+        I love startup because, ideally, it offers a safe place to try radial ideas that could change the way to live.
+        Over the last years, I've had the opportunity to work at several different start-ups in Seattle WA, USA.
       </span>
       <span id="people"
             [style.display]="monolog_pane_showorhide('people')">
         As people, I believe we're best when we seek to serve one another.
-        I've had the fortunate to live in many different cultures and one thing I
-        find true is that people seek meaningful connection.
+        As a Vietnam native lucky to be living in a first world country;
+        I always feel compel to give back - Some domains of interests are education,
+        and sustainability living in rural communities.
       </span>
       </p>
     </span>
