--- a/myapp/src/app/app.component.scss
+++ b/myapp/src/app/app.component.scss
@@ -113,7 +113,7 @@
   }
 
   div#footer{
-    @include gradient-animation( #2ba9a9, #464646, 1s);
+    @include gradient-animation( #ffa117, #464646, 1s);
     border-style: solid;
     display: inline-block;
     position: fixed;
