--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -1,21 +1,50 @@
 <div id="main">
-  <ul id='visual_pane' >
-    <!--<img src="assets/medias/ig.png">-->
-    <li class="content" *ngFor="let img_src of bckgrnd_img_src"
-      [ngStyle]="setStyle()">
-      <a href={{img_src}}> {{img_src}} </a>
-    </li>
-  </ul>
+  <table>
+    <tr>
+      <td [ngStyle]="setStyle()">
+         <a href={{img_src}}> hello  </a>
+      </td>
+      <td [ngStyle]="setStyle()">
+        <a href={{img_src}}> hello </a>
+      </td>
+    <td [ngStyle]="setStyle()">
+      <a href={{img_src}}> hello </a>
+    </td>
+    </tr>
+    <tr>
+      <td [ngStyle]="setStyle()">
+        <a href={{img_src}}> hello </a>
+      </td>
+      <td [ngStyle]="setStyle()">
+        <a href={{img_src}}> hello </a>
+      </td>
+      <td [ngStyle]="setStyle()">
+        <a href={{img_src}}> hello </a>
+      </td>
+    </tr>
+    <tr>
+      <td [ngStyle]="setStyle()">
+        <a href={{img_src}}> hello </a>
+      </td>
+      <td [ngStyle]="setStyle()">
+        <a href={{img_src}}> hello </a>
+      </td>
+      <td [ngStyle]="setStyle()">
+        <a href={{img_src}}> hello </a>
+      </td>
+    </tr>
+  </table>
+  <h1> menu </h1>
 </div>
 
-<div id='monolog_pane'>
+<div id='secondary'>
 
   <ul id="bread_crums">
-    <span> | </span>
-    <li (click)="menu_onClick($event, 'myself')"
-        [ngClass]="menu_state == 'myself'? 'selected':''">
-      myself
-    </li>
+    <!--<span> | </span>-->
+    <!--<li (click)="menu_onClick($event, 'myself')"-->
+        <!--[ngClass]="menu_state == 'myself'? 'selected':''">-->
+      <!--myself-->
+    <!--</li>-->
     <span> | </span>
     <li *ngFor="let item of menu_items"
         (click)="menu_onClick($event, item)"
@@ -36,25 +65,29 @@
       <!--Now I enjoy writing software applications to solve efficiency problems.-->
       <!--</span>-->
       <span id="content_text"
-            [style.display]="monolog_pane_showorhide('myself')">
-        Hey there! Thanks for visiting. I'm a front-end application developer based in Seattle.
-        I have experience working as an intern, a contractor and I have experience as a co-founder of a software start-ups.
-        My side projects include things like automated farming and IoT applications.
-        On my time off, I enjoy recreational sports and exploring different cultures.
+            [style.display]="monolog_pane_showorhide('bio')">
+        I'm driven to build applications that help us be the best versions of ourselves.
+        I study old habits and leverage cutting-edge technologies to find possible solutions.
+        On my downtime, I enjoy traveling, talking to people, and learning new cultures.
       </span>
       <span id="startup"
             [style.display]="monolog_pane_showorhide('startup')">
-        I love startup because, ideally, it offers a safe place to try radial ideas that could change the way to live.
-        Over the last years, I've had the opportunity to work at several different start-ups in Seattle WA, USA.
+        Startup are often small teams that work rapidly toward finding a market fit for realizing product.
+       A good startup environment creates the strongest camaraderie.
+          I love startup because, ideally, it offers a safe place to try radial ideas quickly.
       </span>
       <span id="people"
             [style.display]="monolog_pane_showorhide('people')">
-        As people, I believe we're best when we seek to serve one another.
-        As a Vietnam native lucky to be living in a first world country;
-        I always feel compel to give back - Some domains of interests are education,
-        and sustainability living in rural communities.
+        As people, I believe we are at our best when we seek the best for one another.
+       I enjoy working with people and empowering the ones next to me.
+        A strong bond can withhold any obstacles in achieving the team goals.
+      </span>
+       <span id="about"
+             [style.display]="monolog_pane_showorhide('about')">
+         Application Software Developer
       </span>
       </p>
     </span>
+
 
 </div>
