--- a/myapp/src/app/app.component.css
+++ b/myapp/src/app/app.component.css
@@ -69,43 +69,31 @@
         height: 33px; }
 
   div#footer {
-    background-size: 100%;
-    background-image: -webkit-linear-gradient(#ffa117, #464646);
-    background-image: linear-gradient(#ffa117, #464646);
-    position: relative;
-    z-index: 100;
-    border-style: solid;
     display: inline-block;
     position: fixed;
     bottom: 0;
-    background-color: black;
     width: 100%;
-    height: 40px;
-    font-size: 10pt;
-    font-weight: 500;
-    line-height: 40px;
-    padding-left: auto;
-    padding-right: auto;
+    height: 14%;
     color: white;
-    text-align: center; }
-    div#footer:before {
-      border-radius: inherit;
-      background-image: -webkit-linear-gradient(#464646, #ffa117);
-      background-image: linear-gradient(#464646, #ffa117);
-      content: '';
-      display: block;
-      height: 100%;
-      width: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: 0;
-      z-index: -100;
-      -moz-transition: opacity 1s ease-in-out;
-      -webkit-transition: opacity 1s ease-in-out;
-      transition: opacity 1s ease-in-out; }
-    div#footer:hover:before {
-      opacity: 1; } }
+    text-align: center;
+    background-color: white;
+    opacity: .9; }
+    div#footer span#socialmedia {
+      height: auto;
+      width: auto;
+      margin-right: auto;
+      margin-left: auto; }
+    div#footer a {
+      text-decoration: none; }
+      div#footer a img#social_icon {
+        margin-top: 4%;
+        width: 15%;
+        height: auto;
+        opacity: .7; }
+    div#footer p {
+      text-align: center;
+      color: #ffa117;
+      font-size: .7em; } }
 @media (min-width: 701px) and (max-width: 1200px) {
   .pane_top {
     color: white;
@@ -243,7 +231,6 @@
         margin-left: 10px; }
 
   #social_media_bar {
-    display: none;
     position: static;
     width: 50%;
     height: auto;
@@ -272,20 +259,28 @@
 
   div#footer {
     display: inline-block;
-    position: static;
-    border-style: solid;
-    border-width: 3px 0 0 0;
-    border-color: #ea8000;
-    background-color: black;
-    opacity: .7;
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    height: auto;
-    font-size: 14pt;
-    font-weight: 500;
-    line-height: 25px;
-    padding-left: auto;
-    padding-right: auto;
+    height: 90px;
     color: white;
-    text-align: center; } }
+    text-align: center;
+    background-color: white;
+    opacity: .9; }
+    div#footer span#socialmedia {
+      height: auto;
+      width: auto;
+      margin-right: auto;
+      margin-left: auto; }
+    div#footer img#social_icon {
+      margin-top: 15px;
+      width: 50px;
+      height: 50px;
+      opacity: .7; }
+    div#footer p {
+      margin-top: 3px;
+      text-align: center;
+      color: black;
+      font-size: .8em; } }
 
 /*# sourceMappingURL=app.component.css.map */
