--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -2,21 +2,37 @@
 
 
 <router-outlet> </router-outlet>
-<div id="footer" (click)="toggle_socialMedia()">{{footer_tog == true? 'Follow here':' &copy; tannerphan 2017'}}</div>
-<div id='social_media_bar' [@socialmediaState]="socialmedia_state === true ? 'true':'false'" >
-  <a href='https://github.com/tannerP' target='_top'>
-    <img src="assets/medias/medium.png">
-  </a>
-  <a href='https://github.com/tannerP' target='_top'>
-    <img src="assets/medias/twitter_blk.png">
-  </a>
-  <a href='https://github.com/tannerP' target='_top'>
-    <img src="assets/medias/linkedin_blk.png">
-  </a>
-  <a href='https://github.com/tannerP' target='_top'>
-    <img src="assets/medias/mail_blk.png">
-  </a>
-  <a href='https://github.com/tannerP' target='_top'>
-    <img src="assets/medias/github_blk.png">
-  </a>
+<div id="footer" (click)="toggle_socialMedia()">
+
+  <span id="socialmedia">
+    <a href='https://www.linkedin.com/in/tanner-phan-b70999aa/' target='_top'>
+      <img id="social_icon" src="assets/medias/linkedin_blk.png">
+    </a>
+    <a href='https://twitter.com/tannerphan?lang=en' target='_top'>
+      <img id="social_icon" src="assets/medias/twitter.png">
+    </a>
+    <a href='https://www.instagram.com/tann3rphan/' target='_top'>
+      <img id="social_icon" src="assets/medias/instagram.png">
+    </a>
+    </span>
+  <!--<p>{{footer_tog == true? 'Follow here':' &copy; tannerphan 2017'}}</p>-->
+  <p> &copy; Tanner Phan 2017</p>
 </div>
+
+
+<!--<div id='social_media_bar' [@socialmediaState]="socialmedia_state === true ? 'true':'false'" >-->
+  <!--<a href='https://github.com/tannerP' target='_top'>-->
+  <!--</a>-->
+  <!--<a href='https://github.com/tannerP' target='_top'>-->
+    <!--<img src="assets/medias/twitter_blk.png">-->
+  <!--</a>-->
+  <!--<a href='https://github.com/tannerP' target='_top'>-->
+    <!--<img src="assets/medias/linkedin_blk.png">-->
+  <!--</a>-->
+  <!--<a href='https://github.com/tannerP' target='_top'>-->
+    <!--<img src="assets/medias/mail_blk.png">-->
+  <!--</a>-->
+  <!--<a href='https://github.com/tannerP' target='_top'>-->
+    <!--<img src="assets/medias/github_blk.png">-->
+  <!--</a>-->
+<!--</div>-->
