--- a/myapp/src/app/app.component.scss
+++ b/myapp/src/app/app.component.scss
@@ -113,21 +113,37 @@
   }
 
   div#footer{
-    @include gradient-animation( #ffa117, #464646, 1s);
-    border-style: solid;
+   // @include gradient-animation( #ffa117, #464646, 1s);
     display: inline-block;
     position: fixed;
     bottom: 0;
-    background-color: black;
     width: 100%;
-    height: 40px;
-    font-size: 10pt;
-    font-weight: 500;
-    line-height: 40px;
-    padding-left: auto;
-    padding-right: auto;
+    height: 14%;
     color: white;
     text-align: center;
+    background-color: white;
+    opacity: .9;
+    span#socialmedia{
+      height: auto;
+      width: auto;
+      margin-right: auto;
+      margin-left: auto;
+    }
+    a{
+      text-decoration: none;
+      img#social_icon{
+        margin-top: 4%;
+        width: 15%;
+        height: auto;
+        opacity: .7;
+      }
+    }
+    p{
+      //margin-top: 1px;
+      text-align: center;
+      color: #ffa117;
+      font-size: .7em;
+    }
   }
 }
 
@@ -299,7 +315,6 @@
     }
   }
   #social_media_bar {
-    display: none;
     position: static;
     width: 50%;
     height: auto;
@@ -329,23 +344,36 @@
       }
     }
   }
+
+
   div#footer{
+    // @include gradient-animation( #ffa117, #464646, 1s);
     display: inline-block;
-    position: static;
-    border-style: solid;
-    border-width: 3px 0 0 0;
-    border-color: #ea8000;
-    background-color: black;
-    opacity: .7;
-    // top: 145%;
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    height: auto;
-    font-size: 14pt;
-    font-weight: 500;
-    line-height: 25px;
-    padding-left: auto;
-    padding-right: auto;
+    height: 90px;
     color: white;
     text-align: center;
+    background-color: white;
+    opacity: .9;
+    span#socialmedia{
+      height: auto;
+      width: auto;
+      margin-right: auto;
+      margin-left: auto;
+    }
+    img#social_icon{
+      margin-top: 15px;
+      width: 50px;
+      height: 50px;
+      opacity: .7;
+    }
+    p{
+      margin-top: 3px;
+      text-align: center;
+      color: black;
+      font-size: .8em;
+    }
   }
 }
