--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -96,7 +96,7 @@
 </div>
 <div id="tanner_card">
   <img src="../../assets/medias/me_standing.png">
-  <p> Portfolio =></p>
+  <p id="portfolio"> Portfolio</p>
 </div>
 <div id="about_section">
   <div>
