--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -1,6 +1,68 @@
 @import '../palette.scss';
 @import url('https://fonts.googleapis.com/css?family=Slabo+13px|Suez+13px||Ultra');
+//
+//@-webkit-keyframes move-the-object {
+//  0%   { left: -300px; }
+//  //50% { left: 100px;  }
+//  100% { left: 300px; }
+//}
+//@-moz-keyframes move-the-object {
+//  0%   { left: 100px; }
+//  100% { left: 200px; }
+//}
+//@-o-keyframes move-the-object {
+//  0%   { left: 100px; }
+//  100% { left: 200px; }
+//}
+@keyframes move-the-object {
+  //0%, 20%, 50%, 80%, 100% {
+  //  transform(translateX(0));
+  //}
+  //40% {
+  //  transform(translateX(-30px));
+  //}
+  //60% {
+  //   transform(translateX(-15px));
+  //}
+  0%, 30%  {
+    -moz-transform: translateX(-30);
+    -ms-transform: translateX(-30);
+    -webkit-transform: translateX(-30);
+    transform: translateX(-30);
+    font-style: italic;
+  }
 
+  35% {
+    -moz-transform: translateX(30px);
+    -ms-transform: translateX(30px);
+    -webkit-transform: translateX(30px);
+    transform: translateX(30px);
+    font-style: italic;
+  }
+}
+
+@keyframes moving_background {
+  //0%, 20%, 50%, 80%, 100% {
+  //  transform(translateX(0));
+  //}
+  //40% {
+  //  transform(translateX(-30px));
+  //}
+  //60% {
+  //   transform(translateX(-15px));
+  //}
+  0%, 30%  {
+    transform: translateX(50px) rotate(50deg) translateY(15px);
+  }
+
+  35% {
+    -moz-transform: translateX(30px);
+    -ms-transform: translateX(30px);
+    -webkit-transform: translateX(30px);
+    transform: translateX(30px);
+    font-style: italic;
+  }
+}
 $cust-orange: #ffa117;
 $link-font-color: $cust-orange;
 #menu {
@@ -90,7 +152,7 @@ div#seattle_based_slogan{
 }
 
  img#seattle_skyline {
-    margin-top: 80%;
+    margin-top: 70%;
     height: auto;
     width: 100%;
     opacity: .5;
@@ -107,7 +169,7 @@ div#tanner_card{
   height: 35%;
   text-align: right;
   color: white;
-  font-size: 1em;
+  font-size: 2em;
   background-color: $cust-orange;
   background-size: contain;
   background-repeat: no-repeat;
@@ -123,12 +185,19 @@ div#tanner_card{
       bottom: 10%;
       z-index: 0;
       }
-  p{
+  p#portfolio{
     font-weight: bold;
-    font-size: 3em;
+    font-size: 2em;
     position: relative;
-    bottom: 70%;
-    right: 7%;
+    bottom: 40%;
+    right: 5%;
+    //animation
+    //-webkit-animation: move-the-object .5s 4,  move-the-object .5s 1;
+    //-moz-animation:    move-the-object .5s 1,  move-the-object .5s 1;
+    //-o-animation:      move-the-object .5s 1,  move-the-object .5s 1;
+    animation:         move-the-object 1s infinite;
+   // animation-timing-function:ease-in-out;
+
   }
 }
 
